--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Najot Ta'lim</title>
 </head>
 <body>
+
+<header>
+    <h1>Najot Ta'lim</h1>
+    <button onclick="arr('tugma1')">tugma-1</button>
+    <button onclick="arr('tugma2')">tugma-2</button>
+    <button onclick="arr('tugma3')">tugma-3</button>
+</header>
+<div class="container">
+<main class="matn">
+        <div class="one">
+            <p>        Dasturlash, dizayn va marketing kabi zamonaviy kasblar o‘rgatiladigan markaz.
+            </p>
+        </div>
+        <div class="tue">
+            <p>        Zamonaviy kasblar yordamida insonlar hayotini yaxshilovchi va kelajakka bo‘lgan ishonchni mustahkamlovchi maskan.
+            </p>
+        </div>
     
-
-
-    <script src="./js/index.js"></script>
+        <div class="three">
+            <p>        Bir vaqtning o‘zida 2500 dan ortiq o‘quvchilar va 350 dan ortiq katta jamoani bir maskanga yig‘a olgan ta‘lim va innovatsiya markazi.
+            </p>
+        </div>
+    
+    </main>
+    </div> 
+<script src="./js/index.js"></script>
 </body>
 </html>
